# StudentRegistryAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: studentregistryAPI.yaml
.scannerwork/: report-task.txt
arquivos_py/: crud.py  database.py  main.py  models.py  schemas.py
arquivos_py/routers/: alunos.py
