[tool.poetry]
name = "alunos"
version = "0.1.0"
description = ""
authors = ["keila <keilalinhares@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
annotated-types = "0.7.0"
anyio = "4.6.0"
certifi = "2024.8.30"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.6.1"
email-validator = "2.2.0"
fastapi = "0.115.0"
fastapi-cli = "0.0.5"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.2"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
orjson = "3.10.7"
psycopg2-binary = "^2.9.9"
pydantic = "2.9.2"
pydantic-extra-types = "2.9.0"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.12"
pyyaml = "6.0.2"
rich = "13.8.1"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.35"
starlette = "0.38.6"
typer = "0.12.5"
typing-extensions = "4.12.2"
ujson = "5.10.0"
uvicorn = "0.31.0"
watchfiles = "0.24.0"
websockets = "13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.8"
httpx = "^0.27.2"

[tool.ruff]
line-length = 91

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev arquivos_py./main.py'
lint = 'ruff check . && ruff check . --diff'
format ='ruff check . --fix'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
